finished peer review

--- a/To Do List/Makefile
+++ b/To Do List/Makefile
@@ -1,2 +1,2 @@
-todolist: main.cpp TaskInterface.h Task.cpp Task.h TodoListInterface.h ToDoList.cpp ToDoList.h  
-	g++ -std=c++11 main.cpp Task.cpp ToDoList.cpp  -o todolist
+TODO: main.cpp TaskInterface.h Task.cpp Task.h TodoListInterface.h TodoList.cpp TodoList.h  
+	g++ -std=c++11 main.cpp Task.cpp TodoList.cpp  -o TODO
