--- a/Pinewood Derby/Makefile
+++ b/Pinewood Derby/Makefile
@@ -1,2 +1,5 @@
 pinewood: pinewood.cpp Race.cpp Race.h CarInterface.h Car.h Car.cpp Panda.h Panda.cpp Rocket.h Rocket.cpp 
 	g++ -std=c++11 pinewood.cpp Race.cpp Car.cpp Panda.cpp Rocket.cpp -o pinewood
+CFLAGS=-std=c++11 -g
+debug: debug.cpp
+	g++ $(CFLAGS) debug.cpp -o debug
